@@ -1,5 +1,6 @@
 renderer id,render order,script,settings file (optional)
 RadarBoxRenderer,10,org.lazywizard.radar.renderers.campaign.RadarBoxRenderer,data/config/radar/radar_settings.json
+NebulaRenderer,15,org.lazywizard.radar.renderers.campaign.NebulaRenderer,data/config/radar/radar_settings.json
 PlanetRenderer,20,org.lazywizard.radar.renderers.campaign.PlanetRenderer,data/config/radar/radar_settings.json
 AsteroidRenderer,30,org.lazywizard.radar.renderers.campaign.AsteroidRenderer,data/config/radar/radar_settings.json
 StationRenderer,40,org.lazywizard.radar.renderers.campaign.StationRenderer,data/config/radar/radar_settings.json
