@@ -104,12 +104,9 @@ public class CombatRadarPlugin extends BaseEveryFrameCombatPlugin
                         newZoom = RadarSettings.getNumZoomLevels();
                     }
                 }
-                else
+                else if (++newZoom > RadarSettings.getNumZoomLevels())
                 {
-                    if (++newZoom > RadarSettings.getNumZoomLevels())
-                    {
-                        newZoom = 1;
-                    }
+                    newZoom = 1;
                 }
 
                 setZoomLevel(newZoom);
@@ -330,6 +327,14 @@ public class CombatRadarPlugin extends BaseEveryFrameCombatPlugin
         {
             return MathUtils.isWithinRange(
                     worldLoc, player.getLocation(), sightRadius + padding);
+        }
+
+        @Override
+        public boolean isPointOnRadar(float worldLocX, float worldLocY, float padding)
+        {
+            final float a = worldLocX - player.getLocation().x,
+                    b = worldLocY - player.getLocation().y;
+            return (a * a) + (b * b) <= (sightRadius * sightRadius + padding * padding);
         }
 
         @Override
