@@ -77,6 +77,7 @@
     "showRelays":true,              # Default: true, performance impact ???
     "showCampaignAsteroids":true,   # Default: true, performance impact low
     "showJumpPoints":true,          # Default: true, performance impact ???
+    "showNebulae":true,          # Default: true, performance impact ???
 
 
     ############################
@@ -230,6 +231,15 @@
             # Must be in the "radar" subcategory of the "graphics" section
             "jumpPointIcon":"jumpPoint",
             "jumpPointColor":[255,0,255,255]
+        },
+
+        "nebulaRenderer":
+        {
+            "maxShown":400,
+            # ID of the nebula icon, found in data/config/settings.json
+            # Must be in the "radar" subcategory of the "graphics" section
+            "nebulaIcon":"nebula",
+            "nebulaColor":[175,80,175,150]
         }
     }
 }
